Remove uses of primitive constructors
these constructors are deprecated in JDK 16, which results in spurious
diagnostics in these tests.

PiperOrigin-RevId: 347933146